--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
   justify-content: space-between;
   align-items: center;
   font-size: 20px;
+  position: relative;
 }
 .header__wrapper ul {
   display: flex;
@@ -78,7 +79,9 @@ header {
 .tabs {
   display: flex;
   flex-direction: column;
-  max-width: 1168px;
+  max-width: 660px;
+  width: 45%;
+  min-width: 450px;
 }
 .tab {
   padding: 8px 16px;
@@ -96,6 +99,7 @@ header {
   gap: 20px;
   padding-bottom: 40px;
   padding-top: 15px;
+  flex-wrap: wrap;
 }
 .tabscontent {
 }
@@ -294,7 +298,14 @@ header {
   font-style: normal;
   font-weight: 400;
   line-height: 140%; /* 22.4px */
+  display: flex;
+  gap: 5px;
 }
+.slide-description img{
+  height: 32px;
+
+}
+
 .text-flex {
   display: flex;
   flex-direction: column;
@@ -315,6 +326,9 @@ header {
   padding: 50px 0;
   width: 100%;
   margin: 50px 0;
+}
+.slider-cards.adaptive {
+  display: none;
 }
 .title-section {
   font-size: 46px;
@@ -599,8 +613,9 @@ li::before {
   }
 }
 .price-section {
+  padding: 0 20px;
   padding-top: 200px;
-  width: 1168px;
+  max-width: 1168px;
   margin: 0 auto;
 }
 .price-wrapper {
@@ -609,7 +624,7 @@ li::before {
   flex-direction: column;
   align-items: flex-start;
   align-self: stretch;
-  width: 736px;
+  max-width: 736px;
   margin: 0 auto;
   overflow: hidden;
   background-color: white;
@@ -712,4 +727,242 @@ li::before {
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+.button-popup {
+  display: none;
+}
+.inner-slider-cards{
+  display: flex;
+  justify-content: space-between;
+  max-width: 1168px;
+  margin: 0 auto;
+}
+#popup{
+  opacity: 0;
+  position: absolute;
+  top: -1000px;
+  transition: all 0.2s ease-in-out;
+}
+.header__wrapper ul li:before {
+  display: none;
+}
+@media (max-width: 1168px) {
+  .header__wrapper {
+    padding: 0 20px;
+  }
+  .footer{
+    padding: 20px;
+  }
+  .wrapper{
+    padding: 0 20px;
+  }
+  .intro__wrapper{
+    padding: 0 20px;
+  }
+  .intro{
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
+  .inner-slider-cards {
+    padding: 0 20px;
+    gap: 20px;
+  }
+  .cheaps{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .cheaps-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 280px);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .cheapCard.first{
+    margin-bottom: 90px;
+  }
+  .about{
+    padding: 0 20px;
+  }
+  .image-text img{
+    max-height: 500px;
+  }
+}
+@media (max-width: 950px) {
+  .tabs{
+    width: 100%;
+    max-width: none;
+    min-width: 0;
+  }
+  .tabsWrapperWidth{
+    width: 100%;
+    max-width: none;
+  }
+  .cards {
+    padding: 0 20px;
+  }
+  .intro{
+    padding-top: 60px;
+    align-items: center;
+  }
+  .image-text img{
+    display: none;
+  }
+}
+
+@media (max-width: 1100px) {
+
+}
+
+@media (max-width: 840px) {
+  .header__wrapper ul {
+    display: none;
+  }
+  .phone-link {
+    display: none;
+  }
+  .button-popup {
+    display: block;
+    border: 0;
+    background-color: white;
+    cursor: pointer;
+  }
+  #popup.active{
+    opacity: 1;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    min-height: 50%;
+    background-color: white;
+    padding: 20px;
+    transition: all 0.3s ease-in-out;
+  }
+  #popup.active ul{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer a{
+    font-size: 14px;
+  }
+  .intro__wrapper h1{
+    font-size: 42px;
+  }
+  .title-section{
+    font-size: 36px;
+  }
+  .slider-cards {
+    display: none;
+  }
+  .slider-cards.adaptive {
+    display: block;
+    position: relative;
+    padding: 0 20px;
+  }
+  .swiper-slide-active{
+    display: flex;
+    justify-content: center;
+  }
+  .swiper-slide-prev{
+    opacity: 0;
+  }
+  .swiper-slide-next{
+    opacity: 0;
+  }
+  .faq{
+    padding: 0 20px;
+    min-height: 600px;
+    max-height: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .intro{
+    background: white;
+  }
+  .cheaps-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .cheapCard.second {
+    margin-bottom: 90px;
+  }
+  .faq{
+    padding: 0 20px;
+    min-height: 700px;
+    max-height: none;
+  }
+  .price-count{
+    min-width: 70px;
+    font-size: 14px;
+  }
+  .price-text{
+    font-size: 14px;
+  }
+  .price-count.fix{
+    min-width: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .links-footer{
+    flex-wrap: wrap;
+  }
+  .flexItem img{
+    max-width: 100px;
+  }
+  .itemButton{
+    min-width: 0;
+    width: fit-content;
+  }
+  .cost{
+    font-size: 18px;
+  }
+  .cost span {
+    font-size: 14px;
+  }
+  .flexItem .title{
+    font-size: 20px;
+  }
+  .effectsTitle{
+    font-size: 14px;
+  }
+  .effectItem p{
+    font-size: 12px;
+  }
+  .effSubTitle{
+    font-size: 12px;
+  }
+  .intro__wrapper h1{
+    font-size: 36px;
+  }
+
+  .intro {
+    padding-bottom: 0;
+    height: 77vh;
+  }
+  .faq{
+    padding: 0 20px;
+    min-height: 800px;
+    max-height: none;
+  }
+  .accordion section.active div{
+    max-height: 400px;
+  }
+.textWrapper{
+  padding: 20px;
+}
+}
+
+@media (max-width: 380px) {
+  .flexItem img{
+    max-width: 80px;
+  }
+  .tabsWrapperWidth{
+    padding: 20px;
+  }
+  .about{
+    margin-top: 60px;
+  }
 }
