--- a/style.css
+++ b/style.css
@@ -687,7 +687,7 @@ li::before {
 
 .cheaps{
   display: flex;
-  background: #5531d2;
+  background: #f0f4ff;
   border-radius: 20px;
   max-width: 1168px;
   margin: 0 auto;
@@ -709,7 +709,7 @@ li::before {
 }
 .card-outside{
   border-radius: 20px;
-  background: #F8E4FF;
+  background:#dfd9f1;
   position: absolute;
   top: -90px;
   left: 0;
@@ -718,7 +718,7 @@ li::before {
 
 .cheaps h1{
   font-size: 32px;
-  color: white;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 .cheaps-wrapper{
@@ -879,7 +879,7 @@ li::before {
 
 @media (max-width: 600px) {
   .intro{
-margin-top: 60px;
+margin-top: -55px;
   }
   .cheaps-wrapper {
     display: flex;
